Bug 1098270 - Null check curData in AddPendingRestyle to avoid crashing on style sheet updates in ShadowRoots outside of the composed document. r=dbaron